# Global-Metrics-Project

./: README.md  datapackage.json  pyproject.toml  run_pipeline.py
charts/: index_story.md  test_world_map.html  world_map.html
docs/: Link chat con LLM.txt  Relazione_GlobalMetrics_Estesa.docx
lookup_data/: co2_emissions_enrich_log.txt  countries_lookup.csv  gdp_per_capita_enrich_log.txt  life_expectancy_enrich_log.txt  population_density_enrich_log.txt
opendata_flowlib/: ARCHITECTURE.md  __init__.py
opendata_flowlib/cleaner/: __init__.py  dedup.py  headers.py  nulls.py  numbers.py  types.py
opendata_flowlib/enricher/: __init__.py  enricher.py
opendata_flowlib/pipeline/: __init__.py  pipeline.py
opendata_flowlib/processor/: __init__.py  aggregations.py  filters.py  transformers.py
opendata_flowlib/reader/: __init__.py  file_reader.py  remote_reader.py
opendata_flowlib/tests/: __init__.py  conftest.py  test_cleaner.py  test_enricher.py  test_pipeline.py  test_processor.py  test_reader.py  test_visualizer.py  test_writer.py
opendata_flowlib/visualizer/: __init__.py  charts.py  reports.py
opendata_flowlib/writer/: __init__.py  file_writer.py
processed/: ONTOLOGY_AND_QUERIES.md  data_quality_compliance_report.md
processed/csv/: co2_2020.csv  gdp_2020.csv  global_metrics_2020.csv  global_metrics_with_index_2020.csv  life_exp_2020.csv  pop_density_2020.csv  readme.txt
processed/rdf/: catalog-v001.xml  global_metrics.ttl  ontology.ttl  readme.txt  (+1 more)
raw_data/: API_EN.ATM.CO2E.PC_DS57_en_csv_v2_407566.csv  API_SP.DYN.LE00.IN_DS2_en_csv_v2_408737.csv
(+5 files in other folders)
